[gd_scene load_steps=4 format=3 uid="uid://765railj77eg"]

[ext_resource type="Script" uid="uid://b52reeswurbef" path="res://character/user_interface/idle/character_card/components/labels_and_buttons/battle_command_detail_panel.gd" id="1_1bylc"]
[ext_resource type="PackedScene" uid="uid://bj1pi1e4xbm4c" path="res://character/user_interface/idle/character_card/components/labels_and_buttons/command_speed_bonus_label.tscn" id="2_s7ks2"]
[ext_resource type="PackedScene" uid="uid://bovjmh1c28tdl" path="res://character/user_interface/idle/character_card/components/labels_and_buttons/command_priority_label.tscn" id="3_ek0s7"]

[node name="BattleCommandDetailPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_1bylc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="CommandNameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Command Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CommandDescriptionLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Description xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MinTargetsLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Min Targets: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxTargetsLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Max Targets: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TargetTypesLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Target Types: 000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EffectsLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Effects: xxxx"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CommandSpeedBonusLabel" parent="VBoxContainer" instance=ExtResource("2_s7ks2")]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="CommandPriorityLabel" parent="VBoxContainer" instance=ExtResource("3_ek0s7")]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
